# pfe_vsomeip_android

./: .gitignore  DETAILS_PATTERNS_ET_TESTS.md  TO_RUN_THE_SH_CODE.TXT  code_analysis_report.md
dynamic_communication/: CMakeLists.txt  USAGE.md  run_wireshark_capture.sh
dynamic_communication/build_rr/: dynamic_modular_test  main
dynamic_communication/config/: README.md  event.json  field.json  fire_and_forget.json  request_response.json  vsomeip_capture_client_network.json  vsomeip_capture_service_network.json  vsomeip_dynamic_combined.json  vsomeip_dynamic_combined_capture.json  vsomeip_dynamic_combined_capture_verbose.json  vsomeip_minimal.json  vsomeip_simple.json  vsomeip_wireshark_client_host.json  vsomeip_wireshark_service_host.json  wireshark.json
dynamic_communication/include/modules/: complex_vehicle_modules.hpp  vehicle_action_modules.hpp  vehicle_modules.hpp
dynamic_communication/include/types/: complex_rr_types.hpp  complex_types.hpp  pubsub_types.hpp  vehicle_action_types.hpp  vehicle_types.hpp
dynamic_communication/lib/core/: DynamicCommLibrary.h  PatternRuntimeConfig.cpp  PatternRuntimeConfig.h
dynamic_communication/lib/patterns/Event/: Event.cpp  Event.h
dynamic_communication/lib/patterns/Field/: Field.cpp  Field.h
dynamic_communication/lib/patterns/Fire_Forget/: FireForget.cpp  FireForget.h
dynamic_communication/lib/patterns/Request_Response/: RequestResponse.cpp  RequestResponse.h
dynamic_communication/src/: main.cpp  wireshark_capture.cpp
dynamic_communication/tests/: dynamic_modular_test.cpp
